MDEV-4718 Test "outfile_loaddata" fails on bigendian arches (ppc64)

for field terminators, uchar was compared with char